--- a/package.json
+++ b/package.json
@@ -1,65 +1,82 @@
 {
-  "_args": [
-    [
-      "git+https://github.com/Credit-First/ccxt.git",
-      "/Users/enricoranucci/Desktop/ccxtPro.latest"
-    ]
-  ],
-  "_from": "ccxt@1.50.74",
-  "_id": "ccxt@1.50.74",
-  "_inBundle": false,
-  "_integrity": "sha512-Zksh5xs9umrlobjS0Fmgny16x0D7xxSPvzMoBnd4f6C2aonYSMJY6M5JGOB/KUVH6ooR5YaxDhRNsyco403X2g==",
-  "_location": "/ccxt",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "version",
-    "registry": true,
-    "raw": "ccxt@1.50.74",
-    "name": "ccxt",
-    "escapedName": "ccxt",
-    "rawSpec": "1.50.74",
-    "saveSpec": null,
-    "fetchSpec": "1.50.74"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/ccxt/-/ccxt-1.50.74.tgz",
-  "_spec": "1.50.74",
-  "_where": "/Users/enricoranucci/Desktop/ccxtPro.latest",
-  "author": {
-    "name": "Igor Kroitor",
-    "email": "igor.kroitor@gmail.com",
-    "url": "https://github.com/kroitor"
-  },
-  "bugs": {
-    "url": "https://github.com/ccxt/ccxt/issues"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/ccxt",
-    "logo": "https://opencollective.com/ccxt/logo.txt"
-  },
-  "dependencies": {},
+  "name": "ccxt",
+  "version": "1.50.74",
   "description": "A JavaScript / Python / PHP cryptocurrency trading library with support for 130+ exchanges",
+  "main": "./ccxt.js",
+  "unpkg": "dist/ccxt.browser.js",
+  "engines": {
+    "node": ">=10.4.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Credit-First/ccxt.git"
+  },
+  "readme": "README.md",
+  "scripts": {
+    "docker": "docker-compose run --rm ccxt",
+    "build": "npm run pre-transpile && npm run transpile && npm run post-transpile && npm run update-badges",
+    "force-build": "npm run pre-transpile && npm run force-transpile && npm run post-transpile && npm run update-badges",
+    "pre-transpile": "npm run export-exchanges && npm run vss && npm run copy-python-files && npm run check-js-syntax && npm run browserify",
+    "post-transpile": "npm run check-python-syntax && npm run check-php-syntax",
+    "test": "npm run build && node run-tests",
+    "fast-test": "node run-tests --js",
+    "test-js": "node run-tests --js",
+    "test-py": "node run-tests --python",
+    "test-php": "node run-tests --php",
+    "test-base": "npm run test-js-base && npm run test-python-base && npm run test-php-base",
+    "test-js-base": "node ./js/test/base/test.base.js",
+    "test-python-base": "python3 python/ccxt/test/test_decimal_to_precision.py && python3 python/ccxt/test/test_crypto.py",
+    "test-php-base": "php -f php/test/decimal_to_precision.php && php -f php/test/test_crypto.php",
+    "cli.js": "node ./examples/js/cli.js",
+    "cli.py": "python3 ./examples/py/cli.py",
+    "cli.php": "php ./examples/php/cli.php",
+    "export-exchanges": "node build/export-exchanges",
+    "export-docs": "python3 build/export-docs.py",
+    "capabilities": "node ./examples/js/exchange-capabilities.js",
+    "git-ignore-generated-files": "node build/git-ignore-generated-files",
+    "git-unignore-generated-files": "node build/git-ignore-generated-files --unignore",
+    "update-badges": "node build/update-badges",
+    "update-links": "node build/update-links",
+    "transpile": "node build/transpile",
+    "force-transpile": "node build/transpile --force",
+    "vss": "node build/vss",
+    "lint": "eslint",
+    "check-syntax": "npm run transpile && npm run check-js-syntax && npm run check-python-syntax && npm run check-php-syntax",
+    "check-js-syntax": "node -e \"console.log(process.cwd())\" && eslint --version && eslint \"js/*.js\" \"js/base/Exchange.js\" --cache --cache-location .cache/eslintcache --cache-strategy metadata",
+    "check-python-syntax": "cd python && tox -e qa && cd ..",
+    "check-php-syntax": "php -f php/test/syntax.php",
+    "browserify": "browserify ./ccxt.browser.js > ./dist/ccxt.browser.js",
+    "copy-python-files": "npm run copy-python-package && npm run copy-python-license && npm run copy-python-keys && npm run copy-python-readme",
+    "copy-python-package": "node build/copy package.json python/package.json",
+    "copy-python-license": "node build/copy LICENSE.txt python/LICENSE.txt",
+    "copy-python-keys": "node build/copy keys.json python/keys.json",
+    "copy-python-readme": "node build/copy README.md python/README.md",
+    "postinstall": "node postinstall"
+  },
+  "types": "./ccxt.d.ts",
   "devDependencies": {
     "ansicolor": "1.1.81",
     "as-table": "1.0.37",
     "asciichart": "1.5.25",
     "browserify": "14.5.0",
-    "chai": "4.1.2",
-    "chai-as-promised": "7.1.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "14.1.0",
-    "eslint-plugin-import": "2.20.1",
-    "mocha": "^8.1.3",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.25.4",
     "ololog": "1.1.155"
   },
-  "engines": {
-    "node": ">=7.6.0"
+  "author": {
+    "name": "Igor Kroitor",
+    "email": "igor.kroitor@gmail.com",
+    "url": "https://github.com/kroitor"
   },
-  "ethereum": "0x26a3CB49578F07000575405a57888681249c35Fd",
-  "homepage": "https://ccxt.trade",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ccxt/ccxt/issues"
+  },
+  "homepage": "https://ccxt.com",
   "keywords": [
     "algorithmic",
     "algotrading",
@@ -142,11 +159,11 @@
     "1BTCXE",
     "ACX",
     "acx.io",
-    "allcoin",
+    "Allcoin",
     "allcoin.com",
     "ANX",
     "ANXPro",
-    "bibox",
+    "Bibox",
     "bibox.com",
     "Binance",
     "binance.com",
@@ -157,11 +174,11 @@
     "bitcoincoid",
     "Bitcoin.co.id",
     "Bitfinex",
-    "bitFLyer",
+    "bitFlyer",
     "bitflyer.jp",
-    "bithumb",
+    "Bithumb",
     "bithumb.com",
-    "bitlish",
+    "Bitlish",
     "BitMarket",
     "BitMEX",
     "Bitso",
@@ -171,7 +188,7 @@
     "Bleutrade",
     "bleutrade.com",
     "BlinkTrade",
-    "braziliex",
+    "Braziliex",
     "braziliex.com",
     "BtcBox",
     "btcbox.co.jp",
@@ -194,7 +211,7 @@
     "btc-x",
     "bter",
     "Bter.com",
-    "BX.in.th",
+    "bx.in.th",
     "ccex",
     "C-CEX",
     "cex",
@@ -205,7 +222,7 @@
     "coincheck",
     "CoinExchange",
     "coinexchange.io",
-    "coingi",
+    "Coingi",
     "coingi.com",
     "CoinMarketCap",
     "CoinMate",
@@ -235,7 +252,7 @@
     "itBit",
     "jubi.com",
     "Kraken",
-    "Kucoin",
+    "KuCoin",
     "Kuna",
     "LakeBTC",
     "lakebtc.com",
@@ -246,14 +263,14 @@
     "mercado",
     "MercadoBitcoin",
     "mercadobitcoin.br",
-    "mixcoins",
+    "MixCoins",
     "mixcoins.com",
     "nova",
-    "novaexchange",
+    "Novaexchange",
     "novaexchange.com",
     "OKCoin",
-    "OKCoin.com",
-    "OKCoin.cn",
+    "okcoin.com",
+    "okcoin.cn",
     "OKEX",
     "okex.com",
     "Paymium",
@@ -261,7 +278,7 @@
     "QuadrigaCX",
     "Qryptos",
     "QUOINEX",
-    "Southxchange",
+    "SouthXchange",
     "SurBitcoin",
     "surbitcoin.com",
     "Tidex",
@@ -284,29 +301,24 @@
     "Zaif",
     "ZB",
     "1btcxe.com",
-    "Allcoin",
     "anxpro.com",
     "anybits.com",
     "Anybits",
     "bcex.top",
     "BCEX",
-    "Bibox",
     "big.one",
     "BigONE",
     "bitbank.cc",
     "bitbank",
     "bitbay.net",
     "bitfinex.com",
-    "bitFlyer",
     "bitforex.com",
     "Bitforex",
-    "Bithumb",
     "bitibu.com",
     "Bitibu",
     "bitkk.com",
     "bitkk",
     "bitlish.com",
-    "Bitlish",
     "bitmarket.pl",
     "bitmarket.net",
     "bitmex.com",
@@ -319,17 +331,13 @@
     "Bit-Z",
     "bl3p.eu",
     "bitonic.nl",
-    "Braziliex",
     "btc-alpha.com",
     "BTC-Alpha",
     "btcchina.com",
-    "btctrade.im",
     "BtcTrade.im",
     "buda.com",
     "Buda",
-    "bx.in.th",
     "c-cex.com",
-    "cex.io",
     "trade.chbtc.com",
     "cobinhood.com",
     "COBINHOOD",
@@ -348,7 +356,6 @@
     "CoinFalcon",
     "coinfloor.co.uk",
     "coinfloor",
-    "Coingi",
     "coinmarketcap.com",
     "coinmate.io",
     "coinnest.co.kr",
@@ -379,7 +386,6 @@
     "fybsg.com",
     "gatecoin.com",
     "gate.io",
-    "Gate.io",
     "gdax.com",
     "gemini.com",
     "getbtc.org",
@@ -400,7 +406,6 @@
     "KKEX",
     "kraken.com",
     "kucoin.com",
-    "KuCoin",
     "kuna.io",
     "lbank.info",
     "LBank",
@@ -412,13 +417,9 @@
     "Lykke",
     "mercadobitcoin.com.br",
     "Mercado Bitcoin",
-    "MixCoins",
     "negociecoins.com.br",
     "NegocieCoins",
-    "Novaexchange",
-    "okcoin.cn",
     "OKCoin CNY",
-    "okcoin.com",
     "OKCoin USD",
     "paymium.com",
     "poloniex.com",
@@ -426,7 +427,6 @@
     "rightbtc.com",
     "RightBTC",
     "southxchange.com",
-    "SouthXchange",
     "stronghold.co",
     "Stronghold",
     "theocean.trade",
@@ -449,7 +449,6 @@
     "Binance Jersey",
     "bequant.io",
     "Bequant",
-    "dx.exchange",
     "DX.Exchange",
     "oceanex.pro.com",
     "OceanEx",
@@ -497,7 +496,6 @@
     "probit.com",
     "ProBit",
     "eterbase.com",
-    "ETERBASE",
     "Eterbase",
     "qtrade.io",
     "qTrade",
@@ -505,9 +503,7 @@
     "bitvavo.com",
     "Bitvavo",
     "currency.com",
-    "Currency.com",
     "waves.exchange",
-    "Waves.Exchange",
     "phemex.com",
     "Phemex",
     "huobi.co.jp",
@@ -537,7 +533,6 @@
     "delta.exchange",
     "Delta Exchange",
     "gopax.co.kr",
-    "Gopax",
     "GOPAX",
     "aax.com",
     "AAX",
@@ -554,52 +549,45 @@
     "Binance COIN-M Futures",
     "Binance USDⓈ-M Futures",
     "Binance COIN-M",
-    "Binance USDⓈ-M"
+    "Binance USDⓈ-M",
+    "eqonex.com",
+    "EQONEX",
+    "fmfw.io",
+    "mexc.com",
+    "MEXC Global",
+    "bitrue.com",
+    "Bitrue",
+    "ftx.us",
+    "FTXUS",
+    "FTX US",
+    "zipmex.com",
+    "Zipmex",
+    "zondaglobal.com",
+    "Zonda",
+    "futures.kucoin.com",
+    "KuCoin Futures",
+    "blockchain.com",
+    "crypto.com",
+    "wazirx.com",
+    "WazirX",
+    "woo.org",
+    "Woo",
+    "WOO X",
+    "okx.com",
+    "OKX",
+    "bkex.com",
+    "BKEX",
+    "bitopro.com",
+    "BitoPro",
+    "coinflex.com",
+    "CoinFLEX",
+    "btcex.com",
+    "BTCEX"
   ],
-  "license": "MIT",
-  "main": "./ccxt.js",
-  "name": "ccxt",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.com"
+  "collective": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/ccxt",
+    "logo": "https://opencollective.com/ccxt/logo.txt"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ccxt/ccxt.git"
-  },
-  "scripts": {
-    "browserify": "browserify ./ccxt.browser.js > ./dist/ccxt.browser.js",
-    "build": "npm run pre-transpile && npm run transpile && npm run post-transpile && npm run update-badges",
-    "check-js-syntax": "node -e \"console.log(process.cwd())\" && eslint --version && eslint \"js/*.js\"",
-    "check-php-syntax": "php -f php/test/syntax.php",
-    "check-python-syntax": "cd python && tox -e qa && cd ..",
-    "check-syntax": "npm run transpile && npm run check-js-syntax && npm run check-python-syntax && npm run check-php-syntax",
-    "copy-python-files": "npm run copy-python-package && npm run copy-python-license && npm run copy-python-keys && npm run copy-python-readme",
-    "copy-python-keys": "node build/copy keys.json python/keys.json",
-    "copy-python-license": "node build/copy LICENSE.txt python/LICENSE.txt",
-    "copy-python-package": "node build/copy package.json python/package.json",
-    "copy-python-readme": "node build/copy README.md python/README.md",
-    "docker": "docker-compose run --rm ccxt",
-    "export-exchanges": "node build/export-exchanges",
-    "fast-test": "node run-tests --js",
-    "force-build": "npm run pre-transpile && npm run force-transpile && npm run post-transpile && npm run update-badges",
-    "force-transpile": "node build/transpile --force",
-    "git-ignore-generated-files": "node build/git-ignore-generated-files",
-    "git-unignore-generated-files": "node build/git-ignore-generated-files --unignore",
-    "lint": "eslint",
-    "post-transpile": "npm run check-python-syntax && npm run check-php-syntax",
-    "postinstall": "node postinstall",
-    "pre-transpile": "npm run export-exchanges && npm run vss && npm run copy-python-files && npm run check-js-syntax && npm run browserify",
-    "test": "npm run build && node run-tests",
-    "test-base": "npm run test-js-base && npm run test-python-base && npm run test-php-base",
-    "test-js-base": "mocha js/test/base/test.base.js --reporter ololog/reporter",
-    "test-php-base": "php -f php/test/decimal_to_precision.php && php -f php/test/test_crypto.php",
-    "test-python-base": "python python/ccxt/test/test_decimal_to_precision.py && python python/ccxt/test/test_crypto.py",
-    "transpile": "node build/transpile",
-    "update-badges": "node build/update-badges",
-    "update-links": "node build/update-links",
-    "vss": "node build/vss"
-  },
-  "types": "./ccxt.d.ts",
-  "unpkg": "dist/ccxt.browser.js",
-  "version": "1.50.74"
+  "ethereum": "0x26a3CB49578F07000575405a57888681249c35Fd"
 }
